dataset1235/2025-2/2318198438/users/867892000/executions/2601575092_3221148872.log
== RUN (2025-08-12 17:13:16)
-- CODE: 
var1 = 45
var2 = 30
total = var1 + var2
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 17:13:16)
-- CODE: 
var1 = 45
var2 = 30
total = var1 + var2
print(total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 17:13:05)
-- CODE: 
var1 = 45
var2 = 30
total = var1 + var
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = var1 + var
                   ^^^
NameError: name 'var' is not defined. Did you mean: 'var1'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = var1 + var
                   ^^^
NameError: name 'var' is not defined. Did you mean: 'var1'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 17:13:03)
-- CODE: 
var1 = 45
var2 = 30
total = var1 + var
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = var1 + var
                   ^^^
NameError: name 'var' is not defined. Did you mean: 'var1'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = var1 + var
                   ^^^
NameError: name 'var' is not defined. Did you mean: 'var1'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 17:13:04)
-- CODE: 
var1 = 45
var2 = 30
total = var1 + var
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = var1 + var
                   ^^^
NameError: name 'var' is not defined. Did you mean: 'var1'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = var1 + var
                   ^^^
NameError: name 'var' is not defined. Did you mean: 'var1'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 17:13:16)
-- CODE: 
var1 = 45
var2 = 30
total = var1 + var2
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 17:13:17)
-- CODE: 
var1 = 45
var2 = 30
total = var1 + var2
print(total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
